// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiAccordion behavior closes when clicked twice 1`] = `
<EuiAccordion
  id="6"
  initialIsOpen={false}
  paddingSize="none"
>
  <div
    className="euiAccordion"
  >
    <EuiFlexGroup
      alignItems="center"
      component="div"
      direction="row"
      gutterSize="none"
      justifyContent="flexStart"
      responsive={true}
      wrap={false}
    >
      <div
        className="euiFlexGroup euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <EuiFlexItem
          component="div"
          grow={true}
        >
          <div
            className="euiFlexItem"
          >
            <button
              aria-controls="6"
              aria-expanded={false}
              className="euiAccordion__button"
              onClick={[Function]}
              type="button"
            >
              <EuiFlexGroup
                alignItems="center"
                component="div"
                direction="row"
                gutterSize="s"
                justifyContent="flexStart"
                responsive={false}
                wrap={false}
              >
                <div
                  className="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
                >
                  <EuiFlexItem
                    className="euiAccordion__iconWrapper"
                    component="div"
                    grow={false}
                  >
                    <div
                      className="euiFlexItem euiFlexItem--flexGrowZero euiAccordion__iconWrapper"
                    >
                      <EuiIcon
                        size="m"
                        type="arrowRight"
                      >
                        <arrowRight
                          className="euiIcon euiIcon--medium"
                          focusable="false"
                          height="16"
                          style={null}
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                          xmlnsXlink="http://www.w3.org/1999/xlink"
                        >
                          <svg
                            className="euiIcon euiIcon--medium"
                            focusable="false"
                            height="16"
                            style={null}
                            viewBox="0 0 16 16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                            xmlnsXlink="http://www.w3.org/1999/xlink"
                          >
                            <defs>
                              <path
                                d="M13.069 5.157L8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0z"
                                id="arrow_right-a"
                              />
                            </defs>
                            <use
                              fillRule="nonzero"
                              transform="matrix(0 1 1 0 0 0)"
                              xlinkHref="#arrow_right-a"
                            />
                          </svg>
                        </arrowRight>
                      </EuiIcon>
                    </div>
                  </EuiFlexItem>
                  <EuiFlexItem
                    className="euiAccordion__buttonContent"
                    component="div"
                    grow={true}
                  >
                    <div
                      className="euiFlexItem euiAccordion__buttonContent"
                    />
                  </EuiFlexItem>
                </div>
              </EuiFlexGroup>
            </button>
          </div>
        </EuiFlexItem>
      </div>
    </EuiFlexGroup>
    <div
      className="euiAccordion__childWrapper"
      id="6"
    >
      <EuiMutationObserver
        observerOptions={
          Object {
            "childList": true,
            "subtree": true,
          }
        }
        onMutation={[Function]}
      >
        <div>
          <div
            className=""
          />
        </div>
      </EuiMutationObserver>
    </div>
  </div>
</EuiAccordion>
`;

exports[`EuiAccordion behavior opens when clicked once 1`] = `
<EuiAccordion
  id="5"
  initialIsOpen={false}
  paddingSize="none"
>
  <div
    className="euiAccordion euiAccordion-isOpen"
  >
    <EuiFlexGroup
      alignItems="center"
      component="div"
      direction="row"
      gutterSize="none"
      justifyContent="flexStart"
      responsive={true}
      wrap={false}
    >
      <div
        className="euiFlexGroup euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <EuiFlexItem
          component="div"
          grow={true}
        >
          <div
            className="euiFlexItem"
          >
            <button
              aria-controls="5"
              aria-expanded={true}
              className="euiAccordion__button"
              onClick={[Function]}
              type="button"
            >
              <EuiFlexGroup
                alignItems="center"
                component="div"
                direction="row"
                gutterSize="s"
                justifyContent="flexStart"
                responsive={false}
                wrap={false}
              >
                <div
                  className="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
                >
                  <EuiFlexItem
                    className="euiAccordion__iconWrapper"
                    component="div"
                    grow={false}
                  >
                    <div
                      className="euiFlexItem euiFlexItem--flexGrowZero euiAccordion__iconWrapper"
                    >
                      <EuiIcon
                        size="m"
                        type="arrowDown"
                      >
                        <arrowDown
                          className="euiIcon euiIcon--medium"
                          focusable="false"
                          height="16"
                          style={null}
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                          xmlnsXlink="http://www.w3.org/1999/xlink"
                        >
                          <svg
                            className="euiIcon euiIcon--medium"
                            focusable="false"
                            height="16"
                            style={null}
                            viewBox="0 0 16 16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                            xmlnsXlink="http://www.w3.org/1999/xlink"
                          >
                            <defs>
                              <path
                                d="M13.069 5.157L8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0z"
                                id="arrow_down-a"
                              />
                            </defs>
                            <use
                              fillRule="nonzero"
                              xlinkHref="#arrow_down-a"
                            />
                          </svg>
                        </arrowDown>
                      </EuiIcon>
                    </div>
                  </EuiFlexItem>
                  <EuiFlexItem
                    className="euiAccordion__buttonContent"
                    component="div"
                    grow={true}
                  >
                    <div
                      className="euiFlexItem euiAccordion__buttonContent"
                    />
                  </EuiFlexItem>
                </div>
              </EuiFlexGroup>
            </button>
          </div>
        </EuiFlexItem>
      </div>
    </EuiFlexGroup>
    <div
      className="euiAccordion__childWrapper"
      id="5"
    >
      <EuiMutationObserver
        observerOptions={
          Object {
            "childList": true,
            "subtree": true,
          }
        }
        onMutation={[Function]}
      >
        <div>
          <div
            className=""
          />
        </div>
      </EuiMutationObserver>
    </div>
  </div>
</EuiAccordion>
`;

exports[`EuiAccordion is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiAccordion testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiFlexGroup euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem"
    >
      <button
        aria-controls="0"
        aria-expanded="false"
        class="euiAccordion__button"
        type="button"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
        >
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero euiAccordion__iconWrapper"
          >
            <svg
              class="euiIcon euiIcon--medium"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xlink="http://www.w3.org/1999/xlink"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs>
                <path
                  d="M13.069 5.157L8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0z"
                  id="arrow_right-a"
                />
              </defs>
              <use
                fill-rule="nonzero"
                href="#arrow_right-a"
                transform="matrix(0 1 1 0 0 0)"
              />
            </svg>
          </div>
          <div
            class="euiFlexItem euiAccordion__buttonContent"
          />
        </div>
      </button>
    </div>
  </div>
  <div
    class="euiAccordion__childWrapper"
    id="0"
  >
    <div>
      <div
        class=""
      />
    </div>
  </div>
</div>
`;

exports[`EuiAccordion props buttonContent is rendered 1`] = `
<div
  class="euiAccordion"
>
  <div
    class="euiFlexGroup euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem"
    >
      <button
        aria-controls="2"
        aria-expanded="false"
        class="euiAccordion__button"
        type="button"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
        >
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero euiAccordion__iconWrapper"
          >
            <svg
              class="euiIcon euiIcon--medium"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xlink="http://www.w3.org/1999/xlink"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs>
                <path
                  d="M13.069 5.157L8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0z"
                  id="arrow_right-a"
                />
              </defs>
              <use
                fill-rule="nonzero"
                href="#arrow_right-a"
                transform="matrix(0 1 1 0 0 0)"
              />
            </svg>
          </div>
          <div
            class="euiFlexItem euiAccordion__buttonContent"
          >
            <div>
              Button content
            </div>
          </div>
        </div>
      </button>
    </div>
  </div>
  <div
    class="euiAccordion__childWrapper"
    id="2"
  >
    <div>
      <div
        class=""
      />
    </div>
  </div>
</div>
`;

exports[`EuiAccordion props buttonContentClassName is rendered 1`] = `
<div
  class="euiAccordion"
>
  <div
    class="euiFlexGroup euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem"
    >
      <button
        aria-controls="1"
        aria-expanded="false"
        class="euiAccordion__button"
        type="button"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
        >
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero euiAccordion__iconWrapper"
          >
            <svg
              class="euiIcon euiIcon--medium"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xlink="http://www.w3.org/1999/xlink"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs>
                <path
                  d="M13.069 5.157L8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0z"
                  id="arrow_right-a"
                />
              </defs>
              <use
                fill-rule="nonzero"
                href="#arrow_right-a"
                transform="matrix(0 1 1 0 0 0)"
              />
            </svg>
          </div>
          <div
            class="euiFlexItem euiAccordion__buttonContent button content class name"
          />
        </div>
      </button>
    </div>
  </div>
  <div
    class="euiAccordion__childWrapper"
    id="1"
  >
    <div>
      <div
        class=""
      />
    </div>
  </div>
</div>
`;

exports[`EuiAccordion props extraAction is rendered 1`] = `
<div
  class="euiAccordion"
>
  <div
    class="euiFlexGroup euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem"
    >
      <button
        aria-controls="3"
        aria-expanded="false"
        class="euiAccordion__button"
        type="button"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
        >
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero euiAccordion__iconWrapper"
          >
            <svg
              class="euiIcon euiIcon--medium"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xlink="http://www.w3.org/1999/xlink"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs>
                <path
                  d="M13.069 5.157L8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0z"
                  id="arrow_right-a"
                />
              </defs>
              <use
                fill-rule="nonzero"
                href="#arrow_right-a"
                transform="matrix(0 1 1 0 0 0)"
              />
            </svg>
          </div>
          <div
            class="euiFlexItem euiAccordion__buttonContent"
          />
        </div>
      </button>
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button>
        Extra action
      </button>
    </div>
  </div>
  <div
    class="euiAccordion__childWrapper"
    id="3"
  >
    <div>
      <div
        class=""
      />
    </div>
  </div>
</div>
`;

exports[`EuiAccordion props initialIsOpen is rendered 1`] = `
<div
  class="euiAccordion euiAccordion-isOpen"
>
  <div
    class="euiFlexGroup euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem"
    >
      <button
        aria-controls="4"
        aria-expanded="true"
        class="euiAccordion__button"
        type="button"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
        >
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero euiAccordion__iconWrapper"
          >
            <svg
              class="euiIcon euiIcon--medium"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xlink="http://www.w3.org/1999/xlink"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs>
                <path
                  d="M13.069 5.157L8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0z"
                  id="arrow_down-a"
                />
              </defs>
              <use
                fill-rule="nonzero"
                href="#arrow_down-a"
              />
            </svg>
          </div>
          <div
            class="euiFlexItem euiAccordion__buttonContent"
          />
        </div>
      </button>
    </div>
  </div>
  <div
    class="euiAccordion__childWrapper"
    id="4"
  >
    <div>
      <div
        class=""
      >
        <p>
          You can see me.
        </p>
      </div>
    </div>
  </div>
</div>
`;
